# extrastats

./: README.md  census.json.xz  extrastats.py  extrastats_tests.py  pyproject.toml  requirements.txt  setup.py
extrastats/: extrastats.py
src/extrastats/: __init__.py  extrastats.py
tests/: extrastats_tests.py
tests/data/: titanic.json.xz
